DesiNZC/objects/VehicleAssetCrbnFtprnt.object
<CustomObject>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Case linked to Portfolio Company</description>
        <label>Case</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Case.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Portfolio_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Vehicle Asset Carbon Footprints</relationshipLabel>
        <relationshipName>Vehicle_Asset_Carbon_Footprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Related Opportunity linked to Portfolio Company</description>
        <label>Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Portfolio_Company__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Vehicle Asset Carbon Footprints</relationshipLabel>
        <relationshipName>Vehicle_Asset_Carbon_Footprints</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_Company__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Portfolio Company</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Vehicle Asset Carbon Footprints</relationshipLabel>
        <relationshipName>Vehicle_Asset_Carbon_Footprints</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>